# VoiceInput_System

./: .ffmpeg_cache.json  .gitignore  .pre-commit-config.yaml  ASYNC_PROCESSING_FRAMEWORK.md  BUILD_INSTRUCTIONS.md  BUILD_README.md  BUILD_SYSTEM_README.md  CLEANUP_REPORT.md  COPY_SCRIPT.bat  DECIMAL_LOGIC_DEMO.md  DEPLOYMENT_CHECKLIST.md  DETAILED_RESTRUCTURING_GUIDE.md  DevelopmentRecord.MD  FFMPEG_PREPROCESSING_GUIDE.md  FUNASR_DEVELOPMENT_RECORD.md  FUNASR_MAIN_README.md  FUNASR_USAGE_GUIDE.md  FunASR_DEVELOPMENT_README.md  Git.md  INSTALLATION_GUIDE.md  INTEGRATION_TESTS.md  LICENSE  LIGHT_BUILD_README.md  NUITKA_PACKAGING_GUIDE.md  OLD_VS_NEW_COMPARISON.md  PySide6_GUI设计指南.md  QUICK_BUILD_GUIDE.md  QUICK_START_NUITKA.md  README.md  README_BUILDER.md  README_TEXT_PROCESSOR.md  SHARED_MODULE_GUIDE.md  SOLUTION_SUMMARY.md  START_GUI.md  STRICT_VALIDATION_FIX_SUMMARY.md  STRICT_VALIDATION_SUMMARY.md  SYSTEM_SEPARATION_COMPARISON.md  SYSTEM_SEPARATION_PLAN.md  ToDo.md  __init__.py  (+137 more)
.claude/: README.md  project_rules.md  settings.local.json
Docs/: API文档.md  DEVELOPMENT_DOCUMENTATION.md  DevelopmentRecord.MD  ExcelImprovePlan.md  GUI_README.md  PySide6_实战技巧.md  TEN_VAD_Integration_Report.md  nuitka_build_guide.md  ten_vad_parameters_guide.md  text_processor_refactor_summary.md  学习路径指导.md  未来开发Ideas.md  音量映射说明.md
FunASR_Deployment/: QUICKSTART.txt  VAD_PUNC_GUIDE.md  optional_build_onnx.bat  quick_test.bat  setup_linux.sh  setup_portable.bat  setup_windows.bat
My_Study/: Study.MD
New20251027/: config.yaml  funasr_voice_module.py  funasr_voice_tenvad.py  main_f.py  requirements.txt  text_processor.py  (+1 more)
(+286 files in other folders)
