[project]
name = "voice-input"
version = "0.1.1"
description = "A powerful real-time voice recognition offline system with pause/resume functionality and automatic Excel export capabilities."
authors = [{name = "Pierre.W", email = "xingw1013@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"certifi==2025.8.3",
	"cffi==2.0.0",
	"charset-normalizer==3.4.3",
	"cn2an==0.5.23",
	"colorama==0.4.6",
	"et-xmlfile==2.0.0",
	"idna==3.10",
	"mypy==1.18.2",
	"mypy-extensions==1.1.0",
	"numpy==2.3.3",
	"openpyxl==3.1.5",
	"pandas==2.3.2",
	"pandas-stubs==2.3.2.250926",
	"pathspec==0.12.1",
	"pre-commit>=4.3.0",
	"proces==0.1.7",
	"pyaudio==0.2.14",
	"pycparser==2.23",
	"pynput==1.8.1",
	"pytest>=8.4.2",
	"pytest-cov>=7.0.0",
	"python-dateutil==2.9.0.post0",
	"pytz==2025.2",
	"requests==2.32.5",
	"six==1.17.0",
	"speechrecognition==3.14.3",
	"srt==3.5.3",
	"tqdm==4.67.1",
	"types-openpyxl==3.1.5.20250919",
	"types-pyaudio==0.2.16.20250801",
	"types-pynput==1.8.1.20250809",
	"types-pytz==2025.2.0.20250809",
	"typing-extensions==4.15.0",
	"tzdata==2025.2",
	"urllib3==2.5.0",
	"vosk==0.3.45",
	"websockets==15.0.1",
]

[tool.mypy]
python_version = "3.11"          # 按你实际版本写
ignore_missing_imports = true    # 全局忽略无 stub 的库
exclude = [
    '^backup/',          # 排除 backup 目录及子目录
    '^__pycache__/',     # 排除 __pycache__
    '.*\.xlsx$'          # 排除所有 .xlsx 文件
]
# 如果你只想忽略 cn2an、vosk，用下面两行代替上面那句
# [[tool.mypy.overrides]]
# module = ["cn2an.*", "vosk.*"]
# ignore_missing_imports = true